--- a/it/docker-compose/docker-compose-java.yaml
+++ b/it/docker-compose/docker-compose-java.yaml
@@ -4,7 +4,7 @@ services:
 
   canis-major:
     restart: always
-    image: ${CANISMAJOR_IMAGE:-quay.io/fiware/canismajor}
+    image: ${CANISMAJOR_IMAGE:-quay.io/wi_stefan/canis-major:l-4}
     hostname: canis-major
     depends_on:
       - ganache-cli
@@ -13,9 +13,9 @@ services:
     environment:
       - MICRONAUT_SERVER_PORT=4000
       - MICRONAUT_HTTP_SERVICES_NGSI_URL=http://orion:1026
-      - ETHEREUM_DLT_ADDRESS=http://ganache-cli:8545
+      - ETHEREUM_CONTRACT_ADDRESS="0xE9632d32cC0F83437ac6312e1B35c90d60203C2d"
       - GENERAL_NGSI_TENANT=orion
     networks:
-      - default
+      - test-network
     ports:
       - 4000:4000
