--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -55,4 +55,4 @@ jobs:
       if: ${{ failure() }}
       run: |
         cd it/docker-compose
-        docker-compose -f docker-compose-env.yaml -f docker-compose-${{ matrix.storagetype }}.yaml logs
+        docker-compose -f docker-compose-env.yaml -f docker-compose-java.yaml logs
