--- a/it/docker-compose/docker-compose-java.yaml
+++ b/it/docker-compose/docker-compose-java.yaml
@@ -13,7 +13,7 @@ services:
     environment:
       - MICRONAUT_SERVER_PORT=4000
       - MICRONAUT_HTTP_SERVICES_NGSI_URL=http://orion:1026
-      - ETHEREUM_CONTRACT_ADDRESS="0xE9632d32cC0F83437ac6312e1B35c90d60203C2d"
+      - ETHEREUM_CONTRACT_ADDRESS=0x476059cd57800db8eb88f67c2aa38a6fcf8251e0
       - ETHEREUM_DLT_ADDRESS=ganache-cli:8545
       - GENERAL_NGSI_TENANT=orion
     networks:
