--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,6 +49,12 @@ datasources:
 general:
   ngsiTenant: orion-ld
 
+defaultVaultAccount:
+  enabled: true
+  username: canisMajor
+  token: superSecretToken
+  vaultAddress: http://localhost:8200/v1/ethereum/accounts/canisMajor
+
 ethereum:
   enabled: true
   dltAddress: localhost:8545
