--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: init-iptables
+          image: vault-ethereum
           tags: ${{ github.sha }} ${{ needs.generate-version.outputs.version }}
           dockerfiles: |
             ./it/vault/Dockerfile
