add infromation about query

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -890,6 +890,8 @@ components:
           type: boolean
         gasUsedRaw:
           type: string
+        additionalInformation:
+          type: object
     EntityTransaction:
       type: object
       properties:
