--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <image.tag>latest</image.tag>
 
         <!-- DLT -->
-        <version.org.web3j.core>master</version.org.web3j.core>
+        <version.org.web3j.core>5.0.0</version.org.web3j.core>
 
         <!-- lazy dev -->
         <version.org.mapstruct>1.4.2.Final</version.org.mapstruct>
