--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -110,12 +110,12 @@ jobs:
 
       - name: Build wasm
         run: |
-          docker run -v $(pwd)/proxy/cm-foward-filter:/cm-foward-filter --workdir /cm-foward-filter tinygo/tinygo tinygo build -o cm-foward-filter.wasm -target=wasi ./main.go     
+          docker run -v $(pwd)/proxy/cm-forward-filter:/cm-forward-filter --workdir /cm-forward-filter tinygo/tinygo tinygo build -o cm-forward-filter.wasm -target=wasi ./main.go     
 
       - uses: actions/upload-artifact@v2
         with:
-          name: cm-foward-filter
-          path: proxy/cm-foward-filter/cm-foward-filter.wasm
+          name: cm-forward-filter
+          path: proxy/cm-forward-filter/cm-forward-filter.wasm
 
   vault-ethereum:
 
