--- a/proxy/ossm-extension/Dockerfile
+++ b/proxy/ossm-extension/Dockerfile
@@ -1,8 +1,8 @@
 FROM tinygo/tinygo as build
 
-COPY /proxy/cm-forward-filter/go.mod /cm-forward-filter/go.mod
-COPY /proxy/cm-forward-filter/go.sum /cm-forward-filter/go.sum
-COPY /proxy/cm-forward-filter/main.go /cm-forward-filter/main.go
+COPY ./proxy/cm-forward-filter/go.mod /cm-forward-filter/go.mod
+COPY ./proxy/cm-forward-filter/go.sum /cm-forward-filter/go.sum
+COPY ./proxy/cm-forward-filter/main.go /cm-forward-filter/main.go
 
 WORKDIR /cm-forward-filter
 RUN tinygo build -o cm-forward-filter.wasm -target=wasi ./main.go
