change some folders

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -83,6 +83,7 @@ jobs:
         ENVOY_IMAGE: cm-forward-proxy
       run: |
         cd proxy/docker-compose/
+        sudo ./iptables.sh
         docker-compose up -d
         
     - name: Extract Branch Name
@@ -140,8 +141,9 @@ jobs:
         ENVOY_IMAGE: cm-forward-proxy
       run: |
         cd proxy/docker-compose/
+        sudo iptables.sh
         # workaround to enable strict mode, without changing the base
-        sed -i 's/false/true/g' ./initial-config/ossm-extension/listener.yaml
+        sed -i 's/false/true/g' initial-config/ossm-extension/listener.yaml
         docker-compose up -d
         
     - name: Extract Branch Name
