update sed file path

--- a/.github/workflows/it.yml
+++ b/.github/workflows/it.yml
@@ -143,7 +143,7 @@ jobs:
         cd proxy/docker-compose/
         sudo ./iptables.sh
         # workaround to enable strict mode, without changing the base
-        sed -i 's/false/true/g' initial-config/ossm-extension/listener.yaml
+        sed -i 's/false/true/g' initial-config/listener.yaml
         docker-compose up -d
         
     - name: Extract Branch Name
