--- a/proxy/cm-forward-filter/Dockerfile-envoy
+++ b/proxy/cm-forward-filter/Dockerfile-envoy
@@ -1,4 +1,9 @@
-FROM tinygo/tinygo:master as build
+FROM tinygo/tinygo:0.26.0 as build
+
+# update certificates to trust github
+USER root
+RUN apt-get update
+RUN apt-get install ca-certificates -y
 
 COPY ./go.mod /cm-forward-filter/go.mod
 COPY ./go.sum /cm-forward-filter/go.sum
