--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -48,6 +48,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Build build-stage
+        run: 
+          docker build -f proxy/Dockerfile-build . -t build
+
       - name: Build Image
         id: build-image
         uses: redhat-actions/buildah-build@v2
@@ -81,6 +85,10 @@ jobs:
           sed -i 's/${cm-forward-filter.version}/${{ needs.generate-version.outputs.version }}/g' ./proxy/ossm-extension/manifest.yaml
           cat ./proxy/ossm-extension/manifest.yaml
 
+      - name: Build build-stage
+        run: 
+          docker build -f proxy/Dockerfile-build . -t build
+
       - name: Build Image
         id: build-image
         uses: redhat-actions/buildah-build@v2
@@ -110,6 +118,7 @@ jobs:
 
       - name: Build wasm
         run: |
+          docker build -f proxy/Dockerfile-build . -t build
           docker run -u root -v $(pwd)/proxy/cm-forward-filter:/cm-forward-filter --workdir /cm-forward-filter tinygo/tinygo:0.26.0 tinygo build -o cm-forward-filter.wasm -target=wasi ./main.go     
 
       - uses: actions/upload-artifact@v2
