build the image

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -114,6 +114,7 @@ jobs:
 
       - name: Build wasm
         run: |
+          docker build -f proxy/Dockerfile-build . -t build
           docker run -u root -v $(pwd)/proxy/cm-forward-filter:/cm-forward-filter --workdir /cm-forward-filter build tinygo build -o cm-forward-filter.wasm -target=wasi ./main.go     
 
       - uses: actions/upload-artifact@v2
