--- a/.github/workflows/docapi.yml
+++ b/.github/workflows/docapi.yml
@@ -16,6 +16,6 @@ jobs:
           with:
             node-version: 14.x
         - name: Install node package
-          run: npm install --global @redocly/cli
+          run: npm install @redocly/cli -g
         - name: Generate API Doc
-          run: redoc-cli build-docs ./api/api.yaml
+          run: redocly build-docs ./api/api.yaml
